# EndogenAI

./: .commitlintrc.json  .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  .trivyignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  brain_structure.md  docker-compose.override.yml  docker-compose.yml  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  readme.md  turbo.json
.github/: pull_request_template.md
modules/group-i-signal-processing/attention-filtering/: Dockerfile  README.md  agent-card.json  pyproject.toml  pyrightconfig.json
modules/group-i-signal-processing/attention-filtering/src/attention_filtering/: __init__.py  config.py  models.py  processor.py  py.typed  server.py
modules/group-i-signal-processing/attention-filtering/src/endogenai_attention_filtering/: __init__.py  filter.py  imports.py  models.py  server.py
modules/group-i-signal-processing/attention-filtering/tests/: __init__.py  conftest.py  test_attention_filtering.py  test_filter.py  test_models.py
modules/group-i-signal-processing/perception/: Dockerfile  README.md  agent-card.json  pipeline.config.json  pyproject.toml  vector-store.config.json
modules/group-i-signal-processing/perception/src/endogenai_perception/: __init__.py  imports.py  models.py  pipeline.py  server.py
modules/group-i-signal-processing/perception/src/perception/: __init__.py  config.py  models.py  processor.py  py.typed  server.py
modules/group-i-signal-processing/perception/tests/: __init__.py  conftest.py  test_models.py  test_perception.py  test_pipeline.py
modules/group-i-signal-processing/sensory-input/: Dockerfile  README.md  agent-card.json  pyproject.toml
modules/group-i-signal-processing/sensory-input/src/endogenai_sensory_input/: __init__.py  ingestion.py  models.py  normalize.py  server.py
modules/group-i-signal-processing/sensory-input/src/sensory_input/: __init__.py  config.py  models.py  processor.py  py.typed  server.py
modules/group-i-signal-processing/sensory-input/tests/: __init__.py  conftest.py  test_ingestion.py  test_models.py  test_normalize.py  test_sensory_input.py
modules/group-ii-cognitive-processing/affective/: Dockerfile  README.md  agent-card.json  drive.config.json  pyproject.toml  vector-store.config.json
modules/group-ii-cognitive-processing/affective/src/affective/: __init__.py  a2a_handler.py  drive.py  mcp_tools.py  models.py  rpe.py  server.py  store.py  weighting.py
modules/group-ii-cognitive-processing/affective/tests/: conftest.py  helpers.py  test_drive.py  test_integration_signal_flow.py  test_rpe.py  test_server.py  test_weighting.py
modules/group-ii-cognitive-processing/memory/episodic-memory/: Dockerfile  README.md  agent-card.json  embedding.config.json  pyproject.toml  retention.config.json  vector-store.config.json
modules/group-ii-cognitive-processing/memory/episodic-memory/tests/: conftest.py  test_a2a_handler.py  test_distillation.py  test_indexer.py  test_integration_timeline.py  test_mcp_tools.py  test_retrieval.py  test_server.py  test_store.py  test_timeline.py
modules/group-ii-cognitive-processing/memory/long-term-memory/: Dockerfile  README.md  agent-card.json  indexing.config.json  pyproject.toml  vector-store.config.json
modules/group-ii-cognitive-processing/memory/short-term-memory/: Dockerfile  README.md  agent-card.json  pyproject.toml  ttl.config.json  vector-store.config.json
modules/group-iii-executive-output/: pyproject.toml
modules/group-iii-executive-output/agent-runtime/: Dockerfile  README.md  agent-card.json  orchestrator.config.json  pyproject.toml  pyrightconfig.json  tool-registry.config.json
modules/group-iii-executive-output/agent-runtime/tests/: conftest.py  test_a2a_handler.py  test_activities.py  test_decomposer.py  test_mcp_tools.py  test_orchestrator.py  test_prefect_fallback.py  test_server.py  test_tool_registry.py
modules/group-iii-executive-output/executive-agent/: Dockerfile  README.md  agent-card.json  identity.config.json  pyproject.toml  pyrightconfig.json  vector-store.config.json
modules/group-iii-executive-output/executive-agent/policies/: actions.rego  goals.rego  identity.rego
modules/group-iii-executive-output/executive-agent/tests/: conftest.py  test_a2a_handler.py  test_deliberation.py  test_feedback.py  test_goal_stack.py  test_identity.py  test_integration_bdi_loop.py  test_mcp_tools.py  test_otel_setup.py  test_policy.py  test_store.py
modules/group-iii-executive-output/motor-output/: Dockerfile  README.md  agent-card.json  channels.config.json  error-policy.config.json  pyproject.toml
modules/group-iii-executive-output/motor-output/tests/: conftest.py  test_a2a_handler.py  test_channel_selector.py  test_channels.py  test_dispatcher.py  test_error_policy.py  test_feedback.py  test_mcp_tools.py  test_otel_setup.py  test_server.py
modules/group-iii-executive-output/tests/: test_integration_full_pipeline.py
modules/group-iv-adaptive-systems/: pyproject.toml  pyrightconfig.json
modules/group-iv-adaptive-systems/learning-adaptation/: Dockerfile  README.md  agent-card.json  learning.config.json  pyproject.toml  pyrightconfig.json
modules/group-iv-adaptive-systems/learning-adaptation/tests/: conftest.py  test_a2a_handler.py  test_brain_env.py  test_habit_manager.py  test_mcp_server.py  test_replay_buffer.py  test_server.py  test_trainer.py
modules/group-iv-adaptive-systems/metacognition/: Dockerfile  README.md  agent-card.json  monitoring.config.json  pyproject.toml
modules/group-iv-adaptive-systems/metacognition/tests/: __init__.py  test_evaluator.py  test_interfaces.py  test_metrics.py  test_monitoring_store.py  test_otel_setup.py  test_server.py
modules/group-iv-adaptive-systems/tests/: __init__.py  test_integration.py
shared/a2a/python/: README.md  pyproject.toml
shared/a2a/python/tests/: test_client.py
shared/vector-store/python/: README.md  pyproject.toml  pyrightconfig.json
shared/vector-store/python/tests/: conftest.py  test_chroma.py  test_embedding.py  test_qdrant.py
(+700 files in other folders)
