[project]
name = "endogenai"
version = "0.1.0"
description = "An experimental MCP framework for building specialized AGI systems from the inside out"
readme = "readme.md"
requires-python = ">=3.11"
license = { text = "MIT" }

# ---------------------------------------------------------------------------
# Shared / root-level Python dev dependencies
# Actual module dependencies live in each module's own pyproject.toml
# ---------------------------------------------------------------------------
[dependency-groups]
dev = [
  "ruff>=0.6.0",
  "mypy>=1.11.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pre-commit>=3.8.0",
  "types-PyYAML>=6.0.0",
]

# ---------------------------------------------------------------------------
# Ruff — linter + formatter (replaces flake8, isort, black)
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "SIM", # flake8-simplify
  "RUF", # ruff-specific
]
ignore = [
  "E501",  # line too long (handled by formatter)
  "B008",  # do not perform function calls in default arguments
]

[tool.ruff.lint.isort]
known-first-party = ["endogenai"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------------
# Mypy — static type checking
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
ignore_missing_imports = false

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
  "--strict-markers",
  "-ra",
]
