[project]
name = "endogenai-perception"
version = "0.1.0"
description = "EndogenAI Perception Layer — feature extraction, pattern recognition, multimodal fusion, and brain.perception embedding."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "EndogenAI" }]

dependencies = [
  "pydantic>=2.7",
  "structlog>=24.1",
  "litellm>=1.40",
  "httpx>=0.27",
  "endogenai-vector-store",
]

[tool.uv.sources]
endogenai-vector-store = { path = "../../../shared/vector-store/python", editable = true }

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/endogenai_perception"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "TC001", "TC002"]
