[project]
name = "endogenai-agent-runtime"
version = "0.1.0"
description = "Agent runtime layer — durable task orchestration via Temporal/Prefect, skill pipeline decomposition, and tool registry."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
  "endogenai-vector-store",
  "endogenai-a2a",
  "temporalio>=1.7",
  "litellm>=1.40",
  "prefect>=3.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "structlog>=24.1",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-ulid>=2.0",
]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "pytest-mock>=3.14",
  "respx>=0.21",
  "ruff>=0.4",
  "mypy>=1.10",
  "testcontainers>=4.4",
]

[project.scripts]
serve = "agent_runtime.server:main"

[tool.uv.sources]
endogenai-vector-store = { path = "../../../shared/vector-store/python", editable = true }
endogenai-a2a = { path = "../../../shared/a2a/python", editable = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_runtime"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: marks tests as integration tests (require Docker)",
]

[tool.mypy]
strict = true
python_version = "3.11"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W", "B", "UP", "SIM", "TC", "ANN",
  "PT", "RUF", "I",
]
ignore = [
  "ANN401",
  "ANN101",
  "ANN102",
]
