[project]
name = "endogenai-motor-output"
version = "0.1.0"
description = "Motor / Output / Effector layer — channel-based action dispatch with corollary discharge and error policy. Neuroanatomical analogue: Primary Motor Cortex (M1), Supplementary Motor Area (pre-action signal), Spinal cord (efferent pathway)."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "EndogenAI" }]

dependencies = [
  "endogenai-vector-store",
  "endogenai-a2a",
  "pydantic>=2.7",
  "structlog>=24.1",
  "litellm>=1.40",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "python-ulid>=2.0",
  "aiofiles>=23.2",
  "opentelemetry-instrumentation-fastapi>=0.50b0",
]

[project.scripts]
serve = "motor_output.server:main"

[tool.uv.sources]
endogenai-vector-store = { path = "../../../shared/vector-store/python", editable = true }
endogenai-a2a = { path = "../../../shared/a2a/python", editable = true }

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "anyio>=4.4",
  "pytest-mock>=3.14",
  "respx>=0.21",
  "aiofiles>=23.2",
  "ruff>=0.4",
  "mypy>=1.10",
  "testcontainers>=4.4",
  "types-aiofiles>=23.2",
  "pytest-cov>=5.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/motor_output"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=80"
markers = ["integration: requires live Docker services"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E", "F", "W", "B", "UP", "SIM", "TC", "ANN", "PT", "RUF", "I",
]
ignore = [
  "ANN101", "ANN102", "ANN401",
  "E501",
]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
warn_unused_ignores = true
