[project]
name = "endogenai-vector-store"
version = "0.1.0"
description = "EndogenAI vector store adapter — ChromaDB, Qdrant, and pgvector backends with Ollama embeddings."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "EndogenAI" }]

dependencies = [
  "chromadb>=0.5.0",
  "pydantic>=2.7",
  "httpx>=0.27",
  "tenacity>=8.3",
  "structlog>=24.1",
  "qdrant-client>=1.17.0",
]

[project.optional-dependencies]
qdrant = ["qdrant-client>=1.9"]
pgvector = ["asyncpg>=0.29", "pgvector>=0.3"]

[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "testcontainers[chromadb]>=4.7",
  "testcontainers[generic]>=4.7",
  "anyio>=4.4",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/endogenai_vector_store"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]
