[project]
name = "endogenai-episodic-memory"
version = "0.1.0"
description = "Episodic memory module — autobiographical event log with temporal indexing and semantic distillation."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "EndogenAI" }]

dependencies = [
  "endogenai-vector-store",
  "endogenai-a2a",
  "pydantic>=2.7",
  "structlog>=24.1",
  "litellm>=1.40",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
serve = "episodic_memory.server:main"

[tool.uv.sources]
endogenai-vector-store = { path = "../../../../shared/vector-store/python", editable = true }
endogenai-a2a = { path = "../../../../shared/a2a/python", editable = true }
[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "anyio>=4.4",
  "pytest-mock>=3.14",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/episodic_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=80"
markers = ["integration: marks tests requiring live services (Redis, ChromaDB, Ollama)"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "TC001", "TC002"]
