[project]
name = "endogenai-long-term-memory"
version = "0.1.0"
description = "Long-term memory module — persistent semantic storage with graph and SQL adapters, boot-time seed pipeline."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "EndogenAI" }]

dependencies = [
  "endogenai-vector-store",
  "endogenai-a2a",
  "kuzu>=0.8",
  "llama-index-core>=0.11",
  "llama-index-readers-file>=0.2",
  "pydantic>=2.7",
  "structlog>=24.1",
  "litellm>=1.40",
  "httpx>=0.27",
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
]

[project.scripts]
serve = "long_term_memory.server:main"

[tool.uv.sources]
endogenai-vector-store = { path = "../../../../shared/vector-store/python", editable = true }
endogenai-a2a = { path = "../../../../shared/a2a/python", editable = true }
[dependency-groups]
dev = [
  "pytest>=8.2",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5.0",
  "anyio>=4.4",
  "pytest-mock>=3.14",
  "ruff>=0.4",
  "mypy>=1.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/long_term_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=src --cov-fail-under=80"
markers = ["integration: marks tests requiring live services (Redis, ChromaDB, Ollama)"]

[tool.mypy]
strict = true
python_version = "3.11"
plugins = ["pydantic.mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501", "TC001", "TC002"]
